k8s/app/kratos/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kratos
  namespace: app-namespace
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: auth.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kratos
                port:
                  number: 4433
---
# HTTP to HTTPS redirect
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kratos-redirect
  namespace: app-namespace
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: app-namespace-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: auth.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kratos
                port:
                  number: 4433
